--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "taskflow",
-  "version": "1.0.0",
+  "version": "1.0.0"
   "private": true,
   "dependencies": {
   "react": "^18.2.0",
@@ -13,3 +13,4 @@
   }
 
 }
+
